--- a/Conecpt Samples/HMI/TF8040 Concept Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/Conecpt Samples/HMI/TF8040 Concept Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -527,6 +527,54 @@
             },
             "type": "object"
         },
+        "PLC1.FB_Obj_Sequence": {
+            "additionalProperties": false,
+            "properties": {
+                "Children": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "Loop": {
+                            "$ref": "#/definitions/PLC1.Samples.MAIN.Seq.Loop"
+                        }
+                    },
+                    "type": "object"
+                },
+                "PlcVariables": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "bAcknowledgeRm": {
+                            "$ref": "#/definitions/PLCVar.System.Boolean"
+                        },
+                        "nInstanceID": {
+                            "$ref": "#/definitions/PLCVar.System.UInt32"
+                        },
+                        "sDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolPath": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sTag": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "type": "object"
+        },
         "PLC1.FB_Plt_PlantControl": {
             "additionalProperties": false,
             "properties": {
@@ -2183,20 +2231,8 @@
                         "Cool": {
                             "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
                         },
-                        "Heat1": {
+                        "Heat": {
                             "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
-                        },
-                        "Heat2": {
-                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
-                        },
-                        "Heat3": {
-                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
-                        },
-                        "Heat4": {
-                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
-                        },
-                        "TSeq": {
-                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_SequenceLink_13353"
                         }
                     },
                     "type": "object"
@@ -2497,6 +2533,9 @@
                         },
                         "Misc": {
                             "$ref": "#/definitions/PLC1.FB_Obj_Misc"
+                        },
+                        "Seq": {
+                            "$ref": "#/definitions/PLC1.FB_Obj_Sequence"
                         }
                     },
                     "type": "object"
@@ -2887,6 +2926,90 @@
                         },
                         "PubSubRm": {
                             "$ref": "#/definitions/PLC1.FB_Ref_PubSub_Remote"
+                        }
+                    },
+                    "type": "object"
+                },
+                "PlcVariables": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "bAcknowledgeRm": {
+                            "$ref": "#/definitions/PLCVar.System.Boolean"
+                        },
+                        "nInstanceID": {
+                            "$ref": "#/definitions/PLCVar.System.UInt32"
+                        },
+                        "sDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolPath": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sTag": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "type": "object"
+        },
+        "PLC1.Samples.MAIN.Seq.Loop": {
+            "additionalProperties": false,
+            "properties": {
+                "Children": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "Seq1": {
+                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_SequenceLink_13353"
+                        },
+                        "Seq1Cool": {
+                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
+                        },
+                        "Seq1Erc": {
+                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
+                        },
+                        "Seq1Heat1": {
+                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
+                        },
+                        "Seq1Heat2": {
+                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
+                        },
+                        "Seq2": {
+                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_SequenceLink_13353"
+                        },
+                        "Seq2Heat1": {
+                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
+                        },
+                        "Seq2Heat2": {
+                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
+                        },
+                        "Seq2Heat3": {
+                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
+                        },
+                        "Seq3": {
+                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_SequenceLink_13353"
+                        },
+                        "Seq3Cool1": {
+                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
+                        },
+                        "Seq3Cool2": {
+                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
+                        },
+                        "Seq3Cool3": {
+                            "$ref": "#/definitions/PLC1.Tc3_BA2.FB_BA_Loop_3356341"
                         }
                     },
                     "type": "object"
@@ -7505,7 +7628,8 @@
         "TcHmiBaServerExtension": {
             "ENABLED": true,
             "NAME": "TcHmiBaServerExtension",
-            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.1.4\\runtimes\\any\\native\\",
+            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.2.0\\runtimes\\any\\native\\",
+            "PROCESSID": -1,
             "REQUIRED": false,
             "STARTUPTYPE": 1
         },
@@ -8159,38 +8283,51 @@
                         "additionalProperties": {
                             "properties": {
                                 "adsApplicationName": {
-                                    "propertyOrder": 4,
+                                    "hidden": true,
+                                    "propertyOrder": 5,
                                     "readOnly": true,
                                     "type": "string"
                                 },
                                 "adsProjectCompiledAt": {
                                     "format": "date-time",
-                                    "propertyOrder": 5,
-                                    "readOnly": true,
-                                    "type": "string"
-                                },
-                                "adsProjectName": {
-                                    "propertyOrder": 3,
-                                    "readOnly": true,
-                                    "type": "string"
-                                },
-                                "adsState": {
-                                    "propertyOrder": 6,
-                                    "readOnly": true,
-                                    "type": "string"
-                                },
-                                "adsVersion": {
-                                    "propertyOrder": 2,
-                                    "readOnly": true,
-                                    "type": "string"
-                                },
-                                "connectionState": {
+                                    "hidden": true,
                                     "propertyOrder": 7,
                                     "readOnly": true,
                                     "type": "string"
                                 },
-                                "deviceName": {
+                                "adsProjectName": {
+                                    "propertyOrder": 6,
+                                    "readOnly": true,
+                                    "type": "string"
+                                },
+                                "adsState": {
+                                    "propertyOrder": 3,
+                                    "readOnly": true,
+                                    "type": "string"
+                                },
+                                "adsVersion": {
+                                    "propertyOrder": 8,
+                                    "readOnly": true,
+                                    "type": "string"
+                                },
+                                "connectionState": {
                                     "propertyOrder": 1,
+                                    "readOnly": true,
+                                    "type": "string"
+                                },
+                                "deviceName": {
+                                    "propertyOrder": 4,
+                                    "readOnly": true,
+                                    "type": "string"
+                                },
+                                "isUserModeRuntime": {
+                                    "hidden": true,
+                                    "propertyOrder": 9,
+                                    "readOnly": true,
+                                    "type": "boolean"
+                                },
+                                "systemServiceAdsState": {
+                                    "propertyOrder": 2,
                                     "readOnly": true,
                                     "type": "string"
                                 }
@@ -9856,9 +9993,11 @@
         },
         "PLC1.MAIN.Misc.SchedA.aCalendar": {
             "ACCESS": 3,
+            "CUSTOMERDATA": "",
             "DOMAIN": "ADS",
             "HIDDEN": true,
             "MAPPING": "PLC1::MAIN::Misc::SchedA::aCalendar",
+            "OPTIONS": {},
             "SCHEMA": {
                 "allOf": [
                     {
@@ -9871,13 +10010,16 @@
                         }
                     }
                 ]
-            }
+            },
+            "USEMAPPING": true
         },
         "PLC1.MAIN.Misc.SchedA.aException": {
             "ACCESS": 3,
+            "CUSTOMERDATA": "",
             "DOMAIN": "ADS",
             "HIDDEN": true,
             "MAPPING": "PLC1::MAIN::Misc::SchedA::aException",
+            "OPTIONS": {},
             "SCHEMA": {
                 "allOf": [
                     {
@@ -9890,13 +10032,16 @@
                         }
                     }
                 ]
-            }
+            },
+            "USEMAPPING": true
         },
         "PLC1.MAIN.Misc.SchedA.aWeek": {
             "ACCESS": 3,
+            "CUSTOMERDATA": "",
             "DOMAIN": "ADS",
             "HIDDEN": true,
             "MAPPING": "PLC1::MAIN::Misc::SchedA::aWeek",
+            "OPTIONS": {},
             "SCHEMA": {
                 "allOf": [
                     {
@@ -9909,7 +10054,8 @@
                         }
                     }
                 ]
-            }
+            },
+            "USEMAPPING": true
         },
         "PLC1.MAIN.Misc.SchedB.aCalendar": {
             "ACCESS": 3,
@@ -11503,15 +11649,15 @@
     "VIDEOSEGMENTSIZE": 1048576,
     "VIRTUALDIRECTORIES": {
         "/": "..\\..\\TF8040 Concept Samples HMI\\",
-        "/Beckhoff.TwinCAT.HMI.BA.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.1.1.4\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.1.1.4\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Icons": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.1.1.4\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.ServerExtension": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.1.4",
-        "/Beckhoff.TwinCAT.HMI.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Controls.12.750.1\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.Functions": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Functions.12.750.1\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.ResponsiveNavigation.12.750.1\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.1.2.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.1.2.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Icons": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.1.2.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.ServerExtension": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.2.0",
+        "/Beckhoff.TwinCAT.HMI.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Controls.12.752.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.Functions": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Functions.12.752.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.ResponsiveNavigation.12.752.0\\runtimes\\native1.12-tchmi",
         "/bin": "..\\..\\TF8040 Concept Samples HMI\\bin\\",
         "/bin/framework": "..\\..\\TF8040 Concept Samples HMI\\bin\\framework",
-        "/framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Framework.12.750.1\\runtimes\\native1.12-tchmi"
+        "/framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Framework.12.752.0\\runtimes\\native1.12-tchmi"
     }
 }
