--- a/Pipelines/CreateSampleArchive.yml
+++ b/Pipelines/CreateSampleArchive.yml
@@ -19,7 +19,7 @@ steps:
     rootFolderOrFile: ./${{parameters.sampleName}}/HMI
     includeRootFolder: false
     archiveType: zip
-    archiveFile: archives/${{parameters.sampleName}}/HMI/TF8040 ${{parameters.sampleName}} HMI V1.$(fullVersion).zip
+    archiveFile: archives/${{parameters.sampleName}}/HMI/TF8040 ${{parameters.sampleName}} HMI V1.${{parameters.version}}.zip
 
 #------------------------------------------------------------------------------------
 # Archive PLC project
@@ -30,4 +30,4 @@ steps:
     rootFolderOrFile: ./${{parameters.sampleName}}/PLC
     includeRootFolder: false
     archiveType: zip
-    archiveFile: archives/${{parameters.sampleName}}/PLC/TF8040 ${{parameters.sampleName}} PLC V1.$(fullVersion).zip
+    archiveFile: archives/${{parameters.sampleName}}/PLC/TF8040 ${{parameters.sampleName}} PLC V1.${{parameters.version}}.zip
