--- a/Template Samples/HMI/TF8040 Template Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -11149,7 +11149,8 @@
         "TcHmiBaServerExtension": {
             "ENABLED": true,
             "NAME": "TcHmiBaServerExtension",
-            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.1.4\\runtimes\\any\\native\\",
+            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.2.0\\runtimes\\any\\native\\",
+            "PROCESSID": -1,
             "REQUIRED": false,
             "STARTUPTYPE": 1
         },
@@ -11803,38 +11804,51 @@
                         "additionalProperties": {
                             "properties": {
                                 "adsApplicationName": {
-                                    "propertyOrder": 4,
+                                    "hidden": true,
+                                    "propertyOrder": 5,
                                     "readOnly": true,
                                     "type": "string"
                                 },
                                 "adsProjectCompiledAt": {
                                     "format": "date-time",
-                                    "propertyOrder": 5,
-                                    "readOnly": true,
-                                    "type": "string"
-                                },
-                                "adsProjectName": {
-                                    "propertyOrder": 3,
-                                    "readOnly": true,
-                                    "type": "string"
-                                },
-                                "adsState": {
-                                    "propertyOrder": 6,
-                                    "readOnly": true,
-                                    "type": "string"
-                                },
-                                "adsVersion": {
-                                    "propertyOrder": 2,
-                                    "readOnly": true,
-                                    "type": "string"
-                                },
-                                "connectionState": {
+                                    "hidden": true,
                                     "propertyOrder": 7,
                                     "readOnly": true,
                                     "type": "string"
                                 },
-                                "deviceName": {
+                                "adsProjectName": {
+                                    "propertyOrder": 6,
+                                    "readOnly": true,
+                                    "type": "string"
+                                },
+                                "adsState": {
+                                    "propertyOrder": 3,
+                                    "readOnly": true,
+                                    "type": "string"
+                                },
+                                "adsVersion": {
+                                    "propertyOrder": 8,
+                                    "readOnly": true,
+                                    "type": "string"
+                                },
+                                "connectionState": {
                                     "propertyOrder": 1,
+                                    "readOnly": true,
+                                    "type": "string"
+                                },
+                                "deviceName": {
+                                    "propertyOrder": 4,
+                                    "readOnly": true,
+                                    "type": "string"
+                                },
+                                "isUserModeRuntime": {
+                                    "hidden": true,
+                                    "propertyOrder": 9,
+                                    "readOnly": true,
+                                    "type": "boolean"
+                                },
+                                "systemServiceAdsState": {
+                                    "propertyOrder": 2,
                                     "readOnly": true,
                                     "type": "string"
                                 }
@@ -13270,7 +13284,9 @@
             "ACCESS": 3,
             "CUSTOMERDATA": "",
             "DOMAIN": "TcHmiBaServerExtension",
+            "HIDDEN": false,
             "MAPPING": "PLC1",
+            "OPTIONS": {},
             "SCHEMA": {
                 "$ref": "tchmi:server#/definitions/PLC1"
             },
@@ -14689,15 +14705,15 @@
     "VIDEOSEGMENTSIZE": 1048576,
     "VIRTUALDIRECTORIES": {
         "/": "..\\..\\TF8040 Template Samples HMI\\",
-        "/Beckhoff.TwinCAT.HMI.BA.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.1.1.4\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.1.1.4\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Icons": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.1.1.4\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.ServerExtension": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.1.3",
-        "/Beckhoff.TwinCAT.HMI.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Controls.12.750.1\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.Functions": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Functions.12.750.1\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.ResponsiveNavigation.12.750.1\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.1.2.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.1.2.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Icons": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.1.2.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.ServerExtension": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.2.0",
+        "/Beckhoff.TwinCAT.HMI.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Controls.12.752.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.Functions": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Functions.12.752.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.ResponsiveNavigation.12.752.0\\runtimes\\native1.12-tchmi",
         "/bin": "..\\..\\TF8040 Template Samples HMI\\bin\\",
         "/bin/framework": "..\\..\\TF8040 Template Samples HMI\\bin\\framework",
-        "/framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Framework.12.750.1\\runtimes\\native1.12-tchmi"
+        "/framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Framework.12.752.0\\runtimes\\native1.12-tchmi"
     }
 }
