--- a/Conecpt Samples/HMI/TF8040 Concept Samples HMI/Properties/tchmiconfig.tpl.json
+++ b/Conecpt Samples/HMI/TF8040 Concept Samples HMI/Properties/tchmiconfig.tpl.json
@@ -1,5 +1,5 @@
 ﻿{
-  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.750.1/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
+  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.752.0/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
   "basePath": "./framework",
   "scaleMode": "None",
   "startupView": "Desktop.view",
@@ -45,80 +45,93 @@
       "url": "Content/Pages/EventList.content",
       "preload": false,
       "keepAlive": false,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Pages/PlantView.content",
       "preload": false,
       "keepAlive": false,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Pages/ProjectNavigation.content",
       "preload": false,
       "keepAlive": false,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Pages/ServerLog.content",
       "preload": false,
       "keepAlive": false,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Pages/StartPage.content",
       "preload": false,
       "keepAlive": false,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Samples/BaObjects.content",
       "preload": false,
       "keepAlive": false,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Samples/BasicComponents.content",
       "preload": false,
       "keepAlive": false,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Samples/ColorPicker.content",
       "preload": false,
       "keepAlive": false,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Samples/Events.content",
       "preload": false,
       "keepAlive": false,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Samples/RoomAutomation.content",
       "preload": false,
       "keepAlive": false,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Samples/Schedule.content",
       "preload": false,
       "keepAlive": false,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Samples/Trend.content",
       "preload": false,
       "keepAlive": false,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     }
   ],
   "views": [
     {
       "url": "Desktop.view",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "preloadBindings": false
     }
   ],
   "userFunctions": [],
