--- a/Template Samples/HMI/TF8040 Template Samples HMI/Properties/tchmiconfig.tpl.json
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/Properties/tchmiconfig.tpl.json
@@ -1,5 +1,5 @@
 ﻿{
-  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.750.1/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
+  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.752.0/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
   "basePath": "./framework",
   "scaleMode": "None",
   "startupView": "Desktop.view",
@@ -63,44 +63,51 @@
       "url": "Content/Pages/EventList.content",
       "preload": false,
       "keepAlive": true,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Pages/ProjectNavigation.content",
       "preload": false,
       "keepAlive": true,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Pages/ServerLog.content",
       "preload": false,
       "keepAlive": true,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Pages/StartPage.content",
       "preload": false,
       "keepAlive": true,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Plants/Standard_MAIN_AC_AHU01.content",
       "preload": false,
       "keepAlive": true,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     },
     {
       "url": "Content/Plants/Standard_MAIN_H_HTC01.content",
       "preload": false,
       "keepAlive": false,
-      "loadSync": false
+      "loadSync": false,
+      "preloadBindings": false
     }
   ],
   "views": [
     {
       "url": "Desktop.view",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "preloadBindings": false
     }
   ],
   "userFunctions": [],
