--- a/APIs/C#/TerminalClient/S51-Log/S51-Log.csproj
+++ b/APIs/C#/TerminalClient/S51-Log/S51-Log.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>S05_SimpleWrite</RootNamespace>
+    <RootNamespace>S51_Log</RootNamespace>
     <AssemblyVersion>1.0.1.0</AssemblyVersion>
     <FileVersion>1.0.1.0</FileVersion>
   </PropertyGroup>
