TF8040 Samples: - bump version to 1.5.3; - update NuGet packages and PLC libraries; - use new FB_BA_AHU_1st_10;

--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,5 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+/Conecpt Samples/HMI/json-schema.org/draft-04
+/Template Samples/HMI/json-schema.org/draft-04
