--- a/Template Samples/HMI/TF8040 Template Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -625,7 +625,7 @@
                             "$ref": "#/definitions/BA.PLC1.FB_BA_AC_PreHtr"
                         },
                         "SpTRm": {
-                            "$ref": "#/definitions/BA.PLC1.FB_BA_AC_SpTRm_01"
+                            "$ref": "#/definitions/BA.PLC1.FB_BA_Scale_04_Y2_3"
                         },
                         "SuADiffPrss": {
                             "$ref": "#/definitions/BA.PLC1.FB_BA_SensorAnalog_IO"
@@ -2449,6 +2449,75 @@
                             "$ref": "#/definitions/BA.PLC1.Tc3_BA2.FB_BA_AV_Op_42323"
                         },
                         "YMin": {
+                            "$ref": "#/definitions/BA.PLC1.Tc3_BA2.FB_BA_AV_Op_42323"
+                        }
+                    },
+                    "type": "object"
+                },
+                "PlcVariables": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "bAcknowledgeRm": {
+                            "$ref": "#/definitions/PLCVar.System.Boolean"
+                        },
+                        "nInstanceID": {
+                            "$ref": "#/definitions/PLCVar.System.UInt32"
+                        },
+                        "sDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstDescription": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sInstObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sObjectName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolName": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sSymbolPath": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        },
+                        "sTag": {
+                            "$ref": "#/definitions/PLCVar.System.String"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "type": "object"
+        },
+        "BA.PLC1.FB_BA_Scale_04_Y2_3": {
+            "additionalProperties": false,
+            "properties": {
+                "Children": {
+                    "additionalProperties": false,
+                    "properties": {
+                        "X1": {
+                            "$ref": "#/definitions/BA.PLC1.Tc3_BA2.FB_BA_AV_Op_42323"
+                        },
+                        "X2": {
+                            "$ref": "#/definitions/BA.PLC1.Tc3_BA2.FB_BA_AV_Op_42323"
+                        },
+                        "X3": {
+                            "$ref": "#/definitions/BA.PLC1.Tc3_BA2.FB_BA_AV_Op_42323"
+                        },
+                        "X4": {
+                            "$ref": "#/definitions/BA.PLC1.Tc3_BA2.FB_BA_AV_Op_42323"
+                        },
+                        "Y": {
+                            "$ref": "#/definitions/BA.PLC1.Tc3_BA2.FB_BA_AV_Op_32323"
+                        },
+                        "Y1": {
+                            "$ref": "#/definitions/BA.PLC1.Tc3_BA2.FB_BA_AV_Op_42323"
+                        },
+                        "Y2_3": {
+                            "$ref": "#/definitions/BA.PLC1.Tc3_BA2.FB_BA_AV_Op_42323"
+                        },
+                        "Y4": {
                             "$ref": "#/definitions/BA.PLC1.Tc3_BA2.FB_BA_AV_Op_42323"
                         }
                     },
@@ -5168,7 +5237,7 @@
         "TcHmiBaServerExtension": {
             "ENABLED": true,
             "NAME": "TcHmiBaServerExtension",
-            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.3.1\\runtimes\\any\\native\\",
+            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.4.0\\runtimes\\any\\native\\",
             "REQUIRED": false,
             "STARTUPTYPE": 1
         },
@@ -8955,15 +9024,15 @@
     "VIDEOSEGMENTSIZE": 1048576,
     "VIRTUALDIRECTORIES": {
         "/": "..\\..\\TF8040 Template Samples HMI\\",
-        "/Beckhoff.TwinCAT.HMI.BA.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.1.3.1\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.1.3.1\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Icons": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.1.3.1\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.1.4.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.1.4.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Icons": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.1.4.0\\runtimes\\native1.12-tchmi",
         "/Beckhoff.TwinCAT.HMI.BA.ServerExtension": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.3.1",
-        "/Beckhoff.TwinCAT.HMI.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Controls.12.754.3\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.Functions": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Functions.12.754.3\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.ResponsiveNavigation.12.754.3\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Controls.12.754.4\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.Functions": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Functions.12.754.4\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.ResponsiveNavigation.12.754.4\\runtimes\\native1.12-tchmi",
         "/bin": "..\\..\\TF8040 Template Samples HMI\\bin\\",
         "/bin/framework": "..\\..\\TF8040 Template Samples HMI\\bin\\framework",
-        "/framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Framework.12.754.3\\runtimes\\native1.12-tchmi"
+        "/framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Framework.12.754.4\\runtimes\\native1.12-tchmi"
     }
 }
